--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,12 +18,12 @@ body {
 }
 
 a {
-  color: #4154f1;
+  color: #24d324;
   text-decoration: none;
 }
 
 a:hover {
-  color: #717ff5;
+  color: #24d324;
   text-decoration: none;
 }
 
@@ -48,7 +48,7 @@ section {
   letter-spacing: 1px;
   font-weight: 700;
   margin: 0;
-  color: #4154f1;
+  color: #24d324;
   text-transform: uppercase;
 }
 .section-header p {
@@ -57,7 +57,7 @@ section {
   font-size: 38px;
   line-height: 42px;
   font-weight: 700;
-  color: #012970;
+  color: #24d324;
 }
 @media (max-width: 768px) {
   .section-header p {
@@ -120,7 +120,7 @@ section {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: #4154f1;
+  background: #24d324;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -157,7 +157,7 @@ section {
   padding: 20px 0;
 }
 .header.header-scrolled {
-  background: #fff;
+  background: rgb(0, 0, 0);
   padding: 15px 0;
   box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
 }
@@ -172,7 +172,7 @@ section {
   font-size: 30px;
   font-weight: 700;
   letter-spacing: 1px;
-  color: #012970;
+  color: #ffffff;
   font-family: "Nunito", sans-serif;
   margin-top: 3px;
 }
@@ -204,7 +204,7 @@ section {
   font-family: "Nunito", sans-serif;
   font-size: 16px;
   font-weight: 700;
-  color: #013289;
+  color: #ffffff;
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -214,10 +214,10 @@ section {
   margin-left: 5px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #4154f1;
+  color: #24d324;
 }
 .navbar .getstarted, .navbar .getstarted:focus {
-  background: #4154f1;
+  background: #24d324;
   padding: 8px 20px;
   margin-left: 30px;
   border-radius: 4px;
@@ -225,7 +225,7 @@ section {
 }
 .navbar .getstarted:hover, .navbar .getstarted:focus:hover {
   color: #fff;
-  background: #5969f3;
+  background: #24d324;
 }
 .navbar .dropdown ul {
   display: block;
@@ -237,7 +237,7 @@ section {
   z-index: 99;
   opacity: 0;
   visibility: hidden;
-  background: #fff;
+  background: rgb(0, 0, 0);
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   transition: 0.3s;
   border-radius: 4px;
@@ -255,7 +255,7 @@ section {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #4154f1;
+  color: #24d324;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -286,7 +286,7 @@ section {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #012970;
+  color: #24d324;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -337,10 +337,10 @@ section {
 .navbar-mobile a, .navbar-mobile a:focus {
   padding: 10px 20px;
   font-size: 15px;
-  color: #012970;
+  color: #24d324;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #4154f1;
+  color: #24d324;
 }
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
@@ -366,7 +366,7 @@ section {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #4154f1;
+  color: #24d324;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -378,7 +378,7 @@ section {
 .hero {
   width: 100%;
   height: 100vh;
-  background: url(../img/hero-bg.png) top center no-repeat;
+  background: url(../img/sl1.jpg) top center no-repeat;
   background-size: cover;
 }
 .hero h1 {
@@ -399,7 +399,7 @@ section {
   border-radius: 4px;
   transition: 0.5s;
   color: #fff;
-  background: #4154f1;
+  background: #24d324;
   box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
 }
 .hero .btn-get-started span {
@@ -465,7 +465,7 @@ section {
 .about h3 {
   font-size: 14px;
   font-weight: 700;
-  color: #4154f1;
+  color: #24d324;
   text-transform: uppercase;
 }
 .about h2 {
@@ -483,7 +483,7 @@ section {
   border-radius: 4px;
   transition: 0.5s;
   color: #fff;
-  background: #4154f1;
+  background: #24d324;
   box-shadow: 0px 5px 25px rgba(65, 84, 241, 0.3);
 }
 .about .btn-read-more span {
@@ -547,7 +547,7 @@ section {
   font-size: 42px;
   line-height: 0;
   margin-right: 20px;
-  color: #4154f1;
+  color: #24d324;
 }
 .counts .count-box span {
   font-size: 36px;
@@ -587,7 +587,7 @@ section {
   transition: 0.3s;
 }
 .features .feature-box:hover i {
-  background: #4154f1;
+  background: #24d324;
   color: #fff;
 }
 .features .feture-tabs {
@@ -619,8 +619,8 @@ section {
   border-radius: 0;
 }
 .features .feture-tabs .nav-link.active {
-  color: #4154f1;
-  border-bottom: 3px solid #4154f1;
+  color: #24d324;
+  border-bottom: 3px solid #24d324;
 }
 .features .feture-tabs .tab-content h4 {
   font-size: 18px;
@@ -632,7 +632,7 @@ section {
   font-size: 24px;
   line-height: 0;
   margin-right: 8px;
-  color: #4154f1;
+  color: #24d324;
 }
 .features .feature-icons {
   margin-top: 120px;
@@ -853,17 +853,17 @@ section {
   display: inline-block;
   padding: 8px 40px 10px 40px;
   border-radius: 50px;
-  color: #4154f1;
+  color: #24d324;
   transition: none;
   font-size: 16px;
   font-weight: 400;
   font-family: "Nunito", sans-serif;
   font-weight: 600;
   transition: 0.3s;
-  border: 1px solid #4154f1;
+  border: 1px solid #24d324;
 }
 .pricing .btn-buy:hover {
-  background: #4154f1;
+  background: #24d324;
   color: #fff;
 }
 .pricing .featured {
@@ -875,7 +875,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #4154f1;
+  background: #24d324;
   color: #fff;
 }
 
@@ -898,7 +898,7 @@ section {
 }
 .faq .accordion-button:not(.collapsed) {
   background: none;
-  color: #4154f1;
+  color: #24d324;
   border-bottom: 0;
 }
 .faq .accordion-body {
@@ -932,8 +932,8 @@ section {
   border: 1px solid #fff;
 }
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #4154f1;
-  border-color: #4154f1;
+  color: #24d324;
+  border-color: #24d324;
 }
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0;
@@ -1020,7 +1020,7 @@ section {
 }
 .portfolio .portfolio-wrap .portfolio-links a {
   color: #fff;
-  background: #4154f1;
+  background: #24d324;
   margin: 10px 2px;
   width: 36px;
   height: 36px;
@@ -1077,10 +1077,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #4154f1;
+  border: 1px solid #24d324;
 }
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #4154f1;
+  background-color: #24d324;
 }
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -1165,10 +1165,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #4154f1;
+  border: 1px solid #24d324;
 }
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #4154f1;
+  background-color: #24d324;
 }
 .testimonials .swiper-slide {
   opacity: 0.3;
@@ -1292,10 +1292,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #4154f1;
+  border: 1px solid #24d324;
 }
 .clients .clients-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #4154f1;
+  background-color: #24d324;
 }
 
 /*--------------------------------------------------------------
@@ -1348,7 +1348,7 @@ section {
   font-size: 18px;
 }
 .recent-blog-posts .post-box:hover .post-title {
-  color: #4154f1;
+  color: #24d324;
 }
 .recent-blog-posts .post-box:hover .post-img img {
   transform: rotate(6deg) scale(1.2);
@@ -1365,7 +1365,7 @@ section {
 .contact .info-box i {
   font-size: 38px;
   line-height: 0;
-  color: #4154f1;
+  color: #24d324;
 }
 .contact .info-box h3 {
   font-size: 20px;
@@ -1428,7 +1428,7 @@ section {
   border-radius: 0;
 }
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
-  border-color: #4154f1;
+  border-color: #24d324;
 }
 .contact .php-email-form input {
   padding: 10px 15px;
@@ -1437,7 +1437,7 @@ section {
   padding: 12px 15px;
 }
 .contact .php-email-form button[type=submit] {
-  background: #4154f1;
+  background: #24d324;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1491,7 +1491,7 @@ section {
   transition: 0.3s;
 }
 .blog .entry .entry-title a:hover {
-  color: #4154f1;
+  color: #24d324;
 }
 .blog .entry .entry-meta {
   margin-bottom: 15px;
@@ -1528,7 +1528,7 @@ section {
 }
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #4154f1;
+  background: #24d324;
   color: #fff;
   padding: 6px 20px;
   transition: 0.3s;
@@ -1583,7 +1583,7 @@ section {
   transition: 0.3s;
 }
 .blog .entry .entry-footer a:hover {
-  color: #4154f1;
+  color: #24d324;
 }
 .blog .entry .entry-footer .cats {
   list-style: none;
@@ -1670,7 +1670,7 @@ section {
   transition: 0.3s;
 }
 .blog .blog-comments .comment h5 a:hover {
-  color: #4154f1;
+  color: #24d324;
 }
 .blog .blog-comments .comment h5 .reply {
   padding-left: 10px;
@@ -1751,7 +1751,7 @@ section {
   justify-content: center;
 }
 .blog .blog-pagination li.active, .blog .blog-pagination li:hover {
-  background: #4154f1;
+  background: #24d324;
 }
 .blog .blog-pagination li.active a, .blog .blog-pagination li:hover a {
   color: #fff;
@@ -1794,7 +1794,7 @@ section {
   font-size: 16px;
   padding: 0 15px;
   margin: -1px;
-  background: #4154f1;
+  background: #24d324;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -1818,7 +1818,7 @@ section {
   transition: 0.3s;
 }
 .blog .sidebar .categories ul a:hover {
-  color: #4154f1;
+  color: #24d324;
 }
 .blog .sidebar .categories ul a span {
   padding-left: 5px;
@@ -1842,7 +1842,7 @@ section {
   transition: 0.3s;
 }
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #4154f1;
+  color: #24d324;
 }
 .blog .sidebar .recent-posts time {
   display: block;
@@ -1872,8 +1872,8 @@ section {
 }
 .blog .sidebar .tags ul a:hover {
   color: #fff;
-  border: 1px solid #4154f1;
-  background: #4154f1;
+  border: 1px solid #24d324;
+  background: #24d324;
 }
 .blog .sidebar .tags ul a span {
   padding-left: 5px;
@@ -1885,7 +1885,8 @@ section {
 # Footer
 --------------------------------------------------------------*/
 .footer {
-  background: #f6f9ff;
+  background: #030303;
+  background-color: #000000;
   padding: 0 0 30px 0;
   font-size: 14px;
 }
@@ -1900,7 +1901,7 @@ section {
   padding: 0;
   line-height: 1;
   font-weight: 700;
-  color: #012970;
+  color: #24d324;
 }
 .footer .footer-newsletter form {
   margin-top: 20px;
@@ -1925,22 +1926,22 @@ section {
   font-size: 16px;
   padding: 0 30px;
   margin: 3px;
-  background: #4154f1;
+  background: #24d324;
   color: #fff;
   transition: 0.3s;
   border-radius: 4px;
 }
 .footer .footer-newsletter form input[type=submit]:hover {
-  background: #5969f3;
+  background: #24d324;
 }
 .footer .footer-top {
-  background: white url(../img/footer-bg.png) no-repeat right top;
+  background: rgb(0, 0, 0) url(../img/footer-bg.png) no-repeat right top;
   background-size: contain;
-  border-top: 1px solid #e1ecff;
+  border-top: 1px solid #000000;
   border-bottom: 1px solid #e1ecff;
   padding: 60px 0 30px 0;
 }
-@media (max-width: 992px) {
+@media (max-width: 1920px) {
   .footer .footer-top {
     background-position: center bottom;
   }
@@ -1960,7 +1961,7 @@ section {
   font-size: 30px;
   font-weight: 700;
   letter-spacing: 1px;
-  color: #012970;
+  color: #24d324;
   font-family: "Nunito", sans-serif;
   margin-top: 3px;
 }
@@ -1973,18 +1974,18 @@ section {
 .footer .footer-top .social-links a {
   font-size: 20px;
   display: inline-block;
-  color: rgba(1, 41, 112, 0.5);
+  color: #24d324(1, 41, 112, 0.5);
   line-height: 0;
   margin-right: 10px;
   transition: 0.3s;
 }
 .footer .footer-top .social-links a:hover {
-  color: #012970;
+  color: #24d324;
 }
 .footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #012970;
+  color: #24d324;
   text-transform: uppercase;
   position: relative;
   padding-bottom: 12px;
@@ -2012,13 +2013,13 @@ section {
   padding-top: 0;
 }
 .footer .footer-top .footer-links ul a {
-  color: #013289;
+  color: #24d324;
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
 }
 .footer .footer-top .footer-links ul a:hover {
-  color: #4154f1;
+  color: #24d324;
 }
 .footer .footer-top .footer-contact p {
   line-height: 26px;
@@ -2026,11 +2027,11 @@ section {
 .footer .copyright {
   text-align: center;
   padding-top: 30px;
-  color: #012970;
+  color: #ffffff;
 }
 .footer .credits {
   padding-top: 10px;
   text-align: center;
   font-size: 13px;
-  color: #012970;
+  color: #ffffff;
 }
