--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,7 +176,34 @@ section {
   font-family: "Nunito", sans-serif;
   margin-top: 3px;
 }
-
+/*--------------------------------------------------------------
+# Header2
+--------------------------------------------------------------*/
+.header2 {
+  transition: all 0.5s;
+  z-index: 997;
+  padding: 20px 0;
+}
+.header.header-scrolled {
+  background-color: rgb(0, 0, 0);
+  padding: 15px 0;
+  box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
+}
+.header .logo {
+  line-height: 0;
+}
+.header .logo img {
+  max-height: 40px;
+  margin-right: 6px;
+}
+.header .logo span {
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  color: #ffffff;
+  font-family: "Nunito", sans-serif;
+  margin-top: 3px;
+}
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
