--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,20 +183,21 @@ section {
   transition: all 0.5s;
   z-index: 997;
   padding: 20px 0;
+  background-color: rgb(0, 0, 0);;
 }
-.header.header-scrolled {
+.header2.header-scrolled {
   background-color: rgb(0, 0, 0);
   padding: 15px 0;
   box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
 }
-.header .logo {
+.header2 .logo {
   line-height: 0;
 }
-.header .logo img {
+.header2 .logo img {
   max-height: 40px;
   margin-right: 6px;
 }
-.header .logo span {
+.header2 .logo span {
   font-size: 30px;
   font-weight: 700;
   letter-spacing: 1px;
