--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1912,154 +1912,168 @@ section {
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
-.footer {
-  background: #030303;
-  background-color: #000000;
+
+#footer {
+  background-color: #000;
   padding: 0 0 30px 0;
+  color: #eee;
   font-size: 14px;
+  
 }
-.footer .footer-newsletter {
-  padding: 50px 0;
-  background: #f6f9ff;
-  border-top: 1px solid #e1ecff;
-}
-.footer .footer-newsletter h4 {
-  font-size: 24px;
-  margin: 0 0 10px 0;
-  padding: 0;
-  line-height: 1;
-  font-weight: 700;
-  color: #24d324;
-}
-.footer .footer-newsletter form {
-  margin-top: 20px;
-  background: #fff;
-  padding: 6px 10px;
-  position: relative;
-  border-radius: 4px;
-  border: 1px solid #e1ecff;
-}
-.footer .footer-newsletter form input[type=email] {
-  border: 0;
-  padding: 8px;
-  width: calc(100% - 140px);
-}
-.footer .footer-newsletter form input[type=submit] {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  border: 0;
-  background: none;
-  font-size: 16px;
-  padding: 0 30px;
-  margin: 3px;
-  background: #24d324;
-  color: #fff;
-  transition: 0.3s;
-  border-radius: 4px;
-}
-.footer .footer-newsletter form input[type=submit]:hover {
-  background: #24d324;
-}
-.footer .footer-top {
-  background: rgb(0, 0, 0) url(../img/footer-bg.png) no-repeat right top;
-  background-size: contain;
-  border-top: 1px solid #000000;
-  border-bottom: 1px solid #e1ecff;
+
+#footer .footer-top {
+  background-color: rgba(0, 0, 0, 0.8);
+  background-image: url(../img/123.jpg);
   padding: 60px 0 30px 0;
 }
-@media (max-width: 1920px) {
-  .footer .footer-top {
-    background-position: center bottom;
-  }
-}
-.footer .footer-top .footer-info {
+
+#footer .footer-top .footer-info {
   margin-bottom: 30px;
 }
-.footer .footer-top .footer-info .logo {
-  line-height: 0;
-  margin-bottom: 15px;
-}
-.footer .footer-top .footer-info .logo img {
-  max-height: 40px;
-  margin-right: 6px;
-}
-.footer .footer-top .footer-info .logo span {
-  font-size: 30px;
+
+#footer .footer-top .footer-info h3 {
+  font-size: 34px;
+  margin: 0 0 20px 0;
+  padding: 2px 0 2px 10px;
+  line-height: 1;
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
-  letter-spacing: 1px;
-  color: #24d324;
-  font-family: "Nunito", sans-serif;
-  margin-top: 3px;
+  letter-spacing: 3px;
+  border-left: 4px solid #18d26e;
 }
-.footer .footer-top .footer-info p {
+
+#footer .footer-top .footer-info p {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  color: #eee;
 }
-.footer .footer-top .social-links a {
-  font-size: 20px;
+
+#footer .footer-top .social-links a {
+  font-size: 18px;
   display: inline-block;
-  color: #24d324(1, 41, 112, 0.5);
-  line-height: 0;
-  margin-right: 10px;
+  background: #333;
+  color: #eee;
+  line-height: 1;
+  padding: 8px 0;
+  margin-right: 4px;
+  border-radius: 50%;
+  text-align: center;
+  width: 36px;
+  height: 36px;
   transition: 0.3s;
 }
-.footer .footer-top .social-links a:hover {
-  color: #24d324;
+
+#footer .footer-top .social-links a:hover {
+  background: #18d26e;
+  color: #fff;
 }
-.footer .footer-top h4 {
-  font-size: 16px;
+
+#footer .footer-top h4 {
+  font-size: 14px;
   font-weight: bold;
-  color: #24d324;
+  color: #fff;
   text-transform: uppercase;
   position: relative;
   padding-bottom: 12px;
 }
-.footer .footer-top .footer-links {
+
+#footer .footer-top h4::before,
+#footer .footer-top h4::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px;
+}
+
+#footer .footer-top h4::before {
+  right: 0;
+  background: #555;
+}
+
+#footer .footer-top h4::after {
+  background: #18d26e;
+  width: 60px;
+}
+
+#footer .footer-top .footer-links {
   margin-bottom: 30px;
 }
-.footer .footer-top .footer-links ul {
+
+#footer .footer-top .footer-links ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-.footer .footer-top .footer-links ul i {
-  padding-right: 2px;
-  color: #d0d4fc;
-  font-size: 12px;
-  line-height: 0;
+
+#footer .footer-top .footer-links ul i {
+  padding-right: 8px;
+  color: #ddd;
 }
-.footer .footer-top .footer-links ul li {
+
+#footer .footer-top .footer-links ul li {
+  border-bottom: 1px solid #333;
   padding: 10px 0;
-  display: flex;
-  align-items: center;
 }
-.footer .footer-top .footer-links ul li:first-child {
+
+#footer .footer-top .footer-links ul li:first-child {
   padding-top: 0;
 }
-.footer .footer-top .footer-links ul a {
-  color: #24d324;
-  transition: 0.3s;
-  display: inline-block;
-  line-height: 1;
+
+#footer .footer-top .footer-links ul a {
+  color: #eee;
 }
-.footer .footer-top .footer-links ul a:hover {
-  color: #24d324;
+
+#footer .footer-top .footer-links ul a:hover {
+  color: #18d26e;
 }
-.footer .footer-top .footer-contact p {
+
+#footer .footer-top .footer-contact {
+  margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-contact p {
   line-height: 26px;
 }
-.footer .copyright {
+
+#footer .footer-top .footer-newsletter {
+  margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-newsletter input[type="email"] {
+  border: 0;
+  padding: 6px 8px;
+  width: 65%;
+}
+
+#footer .footer-top .footer-newsletter input[type="submit"] {
+  background: #18d26e;
+  border: 0;
+  width: 35%;
+  padding: 6px 0;
+  text-align: center;
+  color: #fff;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+#footer .footer-top .footer-newsletter input[type="submit"]:hover {
+  background: #13a456;
+}
+
+#footer .copyright {
   text-align: center;
   padding-top: 30px;
-  color: #ffffff;
 }
-.footer .credits {
-  padding-top: 10px;
+
+#footer .credits {
   text-align: center;
   font-size: 13px;
-  color: #ffffff;
+  color: #ddd;
 }
+
+/*--------------------------------------------------------------
+# Responsive Media Queries
+--------------------------------------------------------------*/
